@@ -1,5 +1,12 @@
 2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* src/conn.c: (ADD_WATCH), (REMOVE_WATCH), (gnet_conn_disconnect),
+	  (conn_check_read_queue), (gnet_conn_timeout):
+	  Use the configured main context (if any) to hook up or remove
+	  watches and timeouts.
+
+2007-11-04  Tim-Philipp Müller  <tim at centricular dot net>
+
 	* src/inetaddr.c: (gnet_inetaddr_new_list_async_cancel),
 	  (gnet_inetaddr_get_name_async_cancel):
 	* src/tcp.c: (gnet_tcp_socket_new_async_cancel):
